src/components/sn-docs/news/page-body/pageBody.module.scss
@use "../styles/abstracts/colors" as *;

.form_title {
  transition: padding 1s;
  padding-left: 20px;
  input {
    width: 95%;
    background-color: inherit;
    border: none;
    outline: none;
    font-size: 32px;
    font-weight: 800;
    padding-left: 10px;
    color: $dark-color-tertiary;

    &::placeholder {
      color: #999999;
    }
  }
}

@media screen and (max-width: 768px) {
  .form_title {
    transition: padding 1s;
    padding-left: 10px;
    input {
      width: 95%;
      background-color: inherit;
      border: none;
      outline: none;
      font-size: 20px;
      font-weight: 600;
      padding-left: 0;
      color: $dark-color-tertiary;
  
      &::placeholder {
        color: #999999;
      }
    }
  }
}


.dark .form_title {
  input {
    color: $color-secondary !important;
    &::placeholder {
      color: $background-hover !important;
    }
  }
}


.content {
  overflow-y: auto;
  height: calc(100vh - 44px);
  background-color: $background-secondary;
  overflow-x: hidden;
  position: relative;

  .cover {
    width: 100%;
    height: 280px;
    overflow: hidden;
    z-index: -1;

    .image_wrapper {
      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        z-index: -1;
      }
    }
  }

  .dragging {
    cursor: move;
  }

  .image_footer {
    position: relative;
    background-color: $background-secondary;
    display: flex;
    justify-content: flex-end;
    padding-right: 100px;

    .image_option {
      position: absolute;
      top: -30px;
      font-size: 12px;
      padding: 4px 8px;
      background-color: $background-secondary;
      color: $dark-color-primary;
      cursor: pointer;

      &:first-child {
        right: 173px;
        border-radius: 4px 0 0 4px;
        border-right: 1px solid $color-primary;
      }

      &:last-child {
        right: 100px;
        width: 57px;
        text-align: center;
        border-radius: 0 4px 4px 0;
      }

      &:hover {
        background-color: $background-hover;
      }
    }
  }

  .no_cover {
    height: 150px;
    background-color: $background-secondary;
  }

  .page_content {
    width: 100%;
    height: 100%;
    background-color: $background-secondary;

    .emoji_display {
      position: relative;
      width: 80px;

      img {
        cursor: pointer;
        width: 80px;
        position: absolute;
        top: -45px;
        left: 90px;
        transition: left 1s;
      }
    }

    .page_header_options {
      padding-top: 44px;
      display: flex;
      margin-left: 90px;
      color: $dark-color-primary;
      transition: margin-left 1s;

      .add_button {
        display: flex;
        align-items: center;
        font-size: 14px;
        border-radius: 2px;
        height: 20px;
        padding: 2px 8px;
        fill: $dark-color-primary;
        cursor: pointer;

        &:hover {
          background-color: $color-secondary;
        }
      }
    }

    

    .editor {
      margin: 0 50px;
      transition: margin 1s;
    }

    .project {
      position: absolute;
      bottom: 20px;
      right: 20px;
      color: $dark-color-tertiary;
      background-color: $background-primary;
      border: 1px solid $color-tertiary;

      padding: 3px 16px;
      font-size: 26px;
      border-radius: 50%;
      z-index: 1;
      cursor: pointer;
    }
  }

  .full_width {
    .emoji_display {
      img {
        // left: 480px;
        left: 460px;
      }
    }

    .page_header_options {
      // margin-left: 480px;
      margin-left: 460px;
    }

    form {
      // padding: 10px 0 0 475px;
      padding: 10px 0 0 455px;
    }

    .editor {
      // margin: 0 450px;
      margin: 0 430px;
    }
  }


  .small_text {
    form {
      input {
        font-size: 32px;
      }
    }

    .editor {
      font-size: 14px;
    }
  }

  .serif {
    form {
      input {
        font-family: serif;
      }
    }

    .editor {
      font-family: serif;
    }
  }

  .mono {
    form {
      input {
        font-family: monospace;
      }
    }

    .editor {
      font-family: monospace;
    }
  }
}

.dark {
  background-color: $dark-background-secondary;


  .image_footer {
    background-color: $dark-background-primary;

    .image_option {
      background-color: $dark-background-tertiary;
      color: $color-primary;

      &:hover {
        background-color: $dark-background-hover;
      }
    }
  }

  .no_cover {
    height: 150px;
    background-color: $dark-background-secondary;
  }

  .page_content {
    background-color: $dark-background-secondary;

    .page_header_options {
      .add_button {
        fill: $color-primary;

        &:hover {
          background-color: $dark-background-hover-two;
        }
      }
    }


    .project {
      border: none;
      background-color: $dark-background-tertiary;
      color: $color-tertiary;
    }
  }
}

@media screen and (max-width: 1320px) {
  .content {
    overflow-x: hidden;

    .cover {
      height: 150px;

      .image_wrapper {
        height: 800px;
      }
    }

    .image_footer {
      display: none;
    }

    .page_content {
      .emoji_display {
        img {
          left: 16px;
          
        }
      }

      .page_header_options {
        margin-left: 16px;
      }

      form {
        padding-left: 16px;
      }

      .editor {
        margin: 0;
        width: 95vw;
      }
    }
  }
}

